fanceey animation hehe

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Please do not put site content in the <body> tags! Always put site content in <pageContent> tags.-->
     <pageContent class="grid grid-cols-1 absolute mt-16 w-full justify-items-center p-4">
         <div class="mb-4">
-            <h1 class="bg-clip-text bg-gradient-to-br from-emerald-500 to-cyan-600 text-transparent text-left">Welcome to Xefili.dev ❤️</h1>
+            <h1 id="gradientSwish" class="bg-clip-text bg-gradient-to-br from-emerald-500 to-cyan-600 text-transparent text-left">Welcome to Xefili.dev ❤️</h1>
             <h2 class="text-gray-600">Check out my personal portfolio:</h2>
         </div>
         <cards class="flex flex-wrap justify-center">
