Fixed Links at the bottom showing in the middle for mobile devices

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             </a>
         </cards>
     </pageContent>
-    <div class="flex justify-center w-full bottom-0 mb-2 absolute">
-        <div class="dark:text-white flex lg:w-4/5 w-full justify-evenly">
+    <div class="flex justify-center w-full fixed bottom-0">
+        <div class="dark:text-white flex lg:w-4/5 w-full justify-evenly dark:bg-[#131313]/70 backdrop-blur-xl p-2 mt-4">
             <a href="">Contact</a>
             <a href="">Feedback</a>
             <a href="">Legal</a>
