Navbar background transparency fixed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Home - Xefili.dev</title>
 </head>
 <body class="dark:bg-[#131313] font-circle">
-    <pageHead class="fixed z-50 block h-12 w-full shadow-md dark:text-white">
+    <pageHead class="fixed z-50 block h-12 w-full shadow-md dark:bg-[#131313] bg-white dark:text-white">
         <leftDivision class="h-12 inline-grid grid-cols-[1fr 1fr] gap-2 justify-center items-center">
             <logo><img class="col-span-1 w-8 h-8 ml-2" src="assets/Bucket Helper.svg" alt="Bucket Lounge Logo"></logo>
             <logoText class="col-start-2">
