--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <a href="https://beta.xefili.dev/">
                 <card class="relative">
                     <h3>Documentation</h3>
-                    <p>A never finished project, written with AstroJS. Who knows whether I will finish with it...</p>
+                    <p>Full developer documentation, available in 3 languages. Includes API documentation.</p>
                     <pop class="bg-white dark:text-white dark:bg-[#131313] rounded-full px-3 py-2 w-fit absolute bottom-0 right-0 m-4"><e class="material-symbols-outlined">description</e></pop>
                 </card>
             </a>
@@ -82,6 +82,6 @@
     </div>
 </body>
 <script>
-console.log("Hey, stop looking at the console ;) none of your business!");
+console.info("Wanna know what else is there? Visit https://github.com/xefili/xefili.dev");
 </script>
 </html>
