--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/x-icon" href="assets/Bucket Helper.svg">
     <title>Blog - Xefili.dev</title>
 </head>
-<body class="dark:bg-[#131313] font-circle">
+<body class="dark:bg-dark-100 bg-light-100 font-circle">
     <pageHead class="fixed z-50 block h-12 w-full shadow-md dark:bg-[#131313] bg-white dark:text-white">
         <leftDivision class="h-12 inline-grid grid-cols-[1fr 1fr] gap-2 justify-center items-center">
             <logo><img class="col-span-1 w-8 h-8 ml-2" src="assets/Bucket Helper.svg" alt="Bucket Lounge Logo"></logo>
@@ -38,23 +38,20 @@
     <!-- Please do not put site content in the <body> tags! Always put site content in <pageContent> tags.-->
     <pageContent class="grid grid-cols-1 absolute mt-16 w-full justify-items-center p-4">
         <div class="mb-4">
-            <h1 class="bg-clip-text bg-gradient-to-br from-emerald-500 to-cyan-600 text-transparent text-left">Blog</h1>
-            <h2 class="text-gray-600">Read up on the latest news:</h2>
+            <h1 class="gradient-text text-4xl text-left">Blog</h1>
+            <h2 class="text-gray-600 text-3xl">Read up on the latest news:</h2>
         </div>
-        <div class="flex flex-row text-center items-center w-full justify-center gap-8 p-2 min-h-36 bg-yellow-400/50 mb-4">
-            <e class="material-symbols-outlined font-bold bg-yellow-500/75 bg-clip-text text-transparent !text-6xl">bug_report</e>
-            <div class="dark:text-white">
-                <h1 class="no-underline text-3xl">Blog is still in beta..</h1>
-                <p>The blog has gotten a new design, but the backend and frontend may behave incorrectly at the moment. Report issues on <a href="https://github.com/Xefili/xefili.dev/issues" class="underline underline-offset-4">Github</a></p>
-            </div>
-        </div>
-        <div class="flex flex-col lg:grid lg:grid-cols-2 dark:text-white w-full lg:w-4/5">
-            <a alt="" class="border-2 border-gray-400 rounded-xl p-2 h-72 overflow-hidden" href="https://xefili.dev/blog/read.html?=0"><lgCard id="latest"></lgCard></a>
-            <div id="stories" class="grid grid-cols-1 grid-rows-[repeat(24rem)] gap-4 p-2"></div>
+        <div class="flex justify-center">
+            <div class="lg:grid lg:grid-cols-2 lg:w-2/3 flex flex-col gap-4">
+                <!-- Latest article -->
+                <featured id="latest" class="flex flex-col dark:text-white border-2 p-2 rounded-2xl"></featured>
+                <!-- 5 recents -->
+                <div id="stories" class="grid grid-cols-1 grid-rows-5 dark:text-white gap-4"></div>
+            </div>    
         </div>
     </pageContent>
-    <div class="flex justify-center w-full bottom-0 mb-2 absolute">
-        <div class="dark:text-white flex lg:w-4/5 w-full justify-evenly">
+    <div class="flex justify-center w-full fixed bottom-0 backdrop-blur-xl">
+        <div class="dark:text-white flex lg:w-4/5 w-full justify-evenly p-2 mt-4">
             <a href="">Contact</a>
             <a href="">Feedback</a>
             <a href="">Legal</a>
