--- a/tools/index.html
+++ b/tools/index.html
@@ -8,14 +8,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&family=Roboto+Flex:opsz,wdth,wght@8..144,112.5,400;8..144,112.5,700;8..144,112.5,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/style.css"/>
     <link rel="stylesheet" href="../styles/build.css"/>
-    <link rel="stylesheet" href="../styles/tools.style.css">
     <link rel="icon" type="image/x-icon" href="assets/Bucket Helper.svg">
     <title>Home - Bucket Lounge</title>
 </head>
-<body class="dark:bg-[#131313] font-circle">
-    <pageHead class="fixed z-50 block h-12 w-full shadow-md dark:text-white">
+<body class="dark:bg-dark-100 bg-light-100 font-circle">
+    <pageHead class="fixed z-50 block h-12 w-full shadow-md dark:bg-dark-100 bg-light-100 dark:text-white">
         <leftDivision class="h-12 inline-grid grid-cols-[1fr 1fr] gap-2 justify-center items-center">
             <logo><img class="col-span-1 w-8 h-8 ml-2" src="../assets/Bucket Helper.svg" alt="Bucket Lounge Logo"></logo>
             <logoText class="col-start-2">
@@ -39,11 +37,15 @@
     </pageHead>
     <!-- Please do not put site content in the <body> tags! Always put site content in <pageContent> tags.-->
     <pageContent class="grid grid-cols-1 absolute mt-16 w-full justify-items-center p-4">
-        <div class="flex flex-row justify-center gap-8 bg-emerald-400/50 p-2 min-h-36 items-center w-full">
-            <e class="material-symbols-outlined !text-6xl bg-emerald-500 bg-clip-text text-transparent">system_update</e>
-            <div>
-                <h1 class="text-3xl no-underline">This page is getting a new look!</h1>
-                <p>With the new design being introduced, this page will be affected aswell. For now, it's under contruction for the forseeable future. Check back soon for changes!</p>
+        <div class="w-full m-2 p-4 bg-emerald-500/50 flex flex-row">
+            <div class="flex w-full gap-2 justify-center">
+                <div class="items-end justify-center flex flex-col">
+                    <e class="material-symbols-outlined block text-6xl text-emerald-400">system_update</e>
+                </div>
+                <div>
+                    <h1>This page is getting a new look!</h1>
+                    <p>Soon, something will happen here, stay tuned.</p>
+                </div>    
             </div>
         </div>
     </pageContent>
