--- a/blog.html
+++ b/blog.html
@@ -44,17 +44,24 @@
         <div class="flex justify-center">
             <div class="lg:grid lg:grid-cols-2 lg:w-2/3 flex flex-col gap-4">
                 <!-- Latest article -->
-                <featured id="latest" class="flex flex-col dark:text-white border-2 p-2 rounded-2xl"></featured>
+                <featured id="latest" class="flex flex-col dark:text-white border-2 p-4 rounded-2xl relative">
+                    <h2 class="absolute px-2 bg-light-100 dark:bg-dark-100 -top-3 ml-1">Featured Article</h2>
+                </featured>
                 <!-- 5 recents -->
-                <div id="stories" class="grid grid-cols-1 grid-rows-5 dark:text-white gap-4"></div>
+                <div id="stories" class="relative grid grid-cols-1 grid-rows-5 dark:text-white gap-4">
+                    <h3 class="absolute px-2 bg-light-100 dark:bg-dark-100 -top-3 ml-2">Recents</h3>
+                </div>
             </div>    
+        </div>
+        <div class="block bg-light-200 dark:bg-dark-200 p-4 rounded-2xl dark:text-white mt-4">
+            <p>Looking for an older article? View all articles in <a class="underline underline-offset-4" href="https://xefili.dev/blog/displayArticle.html">the archive</a>.</p>
         </div>
     </pageContent>
     <div class="flex justify-center w-full fixed bottom-0 backdrop-blur-xl">
         <div class="dark:text-white flex lg:w-4/5 w-full justify-evenly p-2 mt-4">
-            <a href="">Contact</a>
-            <a href="">Feedback</a>
-            <a href="">Legal</a>
+            <a href="https://xefili.dev/misc/contact.html">Contact</a>
+            <a href="https://xefili.dev/misc/feedback.html">Feedback</a>
+            <a href="https://xefili.dev/misc/legal.html">Legal</a>
         </div>
     </div>
 </body>
