Update tools link in index.html to point to tools.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="https://xefili.dev/docs">
                 <docs class="flex items-center font-circleBold mr-8 md:before:content-['Documentation⠀']"><span class="material-symbols-outlined">description</span></Docs>
             </a>
-            <a href="/tools/index.html">
+            <a href="tools.html">
                 <tools class="flex items-center font-circleBold mr-8 md:before:content-['Tools⠀']"><span class="material-symbols-outlined">construction</span></search>
             </a>
         </navBar>
