--- a/tools.html
+++ b/tools.html
@@ -13,28 +13,9 @@
     <title>Home - Bucket Lounge</title>
 </head>
 <body class="dark:bg-dark-100 bg-light-100 font-circle">
-    <pageHead class="fixed z-50 block h-12 w-full shadow-md dark:bg-dark-100 bg-light-100 dark:text-white">
-        <leftDivision class="h-12 inline-grid grid-cols-[1fr 1fr] gap-2 justify-center items-center">
-            <logo><img class="col-span-1 w-8 h-8 ml-2" src="assets/Bucket Helper.svg" alt="Bucket Lounge Logo"></logo>
-            <logoText class="col-start-2">
-                <span class="font-circleBold font-black">Xefili.dev</span>
-            </logoText>
-        </leftDivision>
-        <navBar class="flex float-right h-12 items-center justify-evenly">
-            <a href="https://api.xefili.dev/v1/">
-                <home class="flex items-center font-circleBold mr-8 md:before:content-['API⠀']"><span class="material-symbols-outlined">api</span></home>
-            </a>
-            <a href="blog.html">
-                <blog class="flex items-center font-circleBold mr-8 md:before:content-['Blog⠀']"><span class="material-symbols-outlined">chat</span></Blog>
-            </a>
-            <a href="https://xefili.dev/docs">
-                <docs class="flex items-center font-circleBold mr-8 md:before:content-['Documentation⠀']"><span class="material-symbols-outlined">description</span></Docs>
-            </a>
-            <a href="https://xefili.dev/">
-                <tools class="flex items-center font-circleBold mr-8 md:before:content-['Home⠀']"><span class="material-symbols-outlined">home</span></search>
-            </a>
-        </navBar>
-    </pageHead>
+
+    <xefili-header></xefili-header>
+
     <!-- Please do not put site content in the <body> tags! Always put site content in <pageContent> tags.-->
     <pageContent class="grid grid-cols-1 absolute mt-16 w-full justify-items-center p-4">
         <div>
