--- a/tools.html
+++ b/tools.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&family=Roboto+Flex:opsz,wdth,wght@8..144,112.5,400;8..144,112.5,700;8..144,112.5,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/build.css"/>
     <link rel="icon" type="image/x-icon" href="assets/Bucket Helper.svg">
+    <script src="elements/header.js"></script>
     <title>Home - Bucket Lounge</title>
 </head>
 <body class="dark:bg-dark-100 bg-light-100 font-circle">
