Custom Header Element

--- a/android/DrivingExp/privacy.html
+++ b/android/DrivingExp/privacy.html
@@ -3,15 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
     <link rel="stylesheet" href="../../styles/build.css">
-    <title>Support</title>
+    <script src="../../elements/header.js"></script>
+    <title>Driving Experience Privacy Policy <span class="material-symbols-outlined">Android</span></title>
 </head>
-<body class="bg-light-100 dark:bg-dark-100 dark:text-white m-2">
-    <div class="flex flex-col text-center">
-        <h1 class="text-2xl underline underline-offset-4 mb-4">Privacy Policy (Driving Experience App)</h1>
-        <p>All data collected is used for identification and functionality. Data shared may include name and ratings. You may opt-in for name sharing, but ratings will always be public. You can request to have your data delete (GDPR) by contacting me: mail@xefili.dev.</p>
+<body class="bg-light-100 dark:bg-dark-100 dark:text-white font-circle">
 
-        <span class="mt-12">Made with ❤️ in Kehl</span>
+    <xefili-header></xefili-header>
+
+    <div class="absolute mt-16 w-full">
+        <div class="flex flex-col text-center mx-2">
+            <h1 class="text-2xl underline underline-offset-4 mb-4">Privacy Policy (Driving Experience App)</h1>
+            <p>All data collected is used for identification and functionality. Data shared may include name and ratings. You may opt-in for name sharing, but ratings will always be public. You can request to have your data delete (GDPR) by contacting me: mail@xefili.dev.</p>
+
+            <span class="mt-12">Made with ❤️ in Kehl</span>
+        </div>
     </div>
 </body>
 </html>
