--- a/android/DrivingExp/support.html
+++ b/android/DrivingExp/support.html
@@ -3,15 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
     <link rel="stylesheet" href="../../styles/build.css">
+    <script src="../../elements/header.js"></script>
     <title>Support</title>
 </head>
-<body class="bg-light-100 dark:bg-dark-100 dark:text-white m-2">
-    <div class="flex flex-col text-center">
-        <h1 class="text-2xl underline underline-offset-4 mb-4">This page is being developed in will be available soon...</h1>
-        <p>If you want to request data deletion, write an email to mail@xefili.dev with your access code and proof of identity.</p>
+<body class="bg-light-100 dark:bg-dark-100 dark:text-white">
 
-        <span class="mt-12">Made with ❤️ in Kehl</span>
+    <xefili-header></xefili-header>
+
+    <div class="absolute mt-16 w-full">
+        <div class="flex flex-col text-center mx-2">
+            <h1 class="text-2xl underline underline-offset-4 mb-4">This page is being developed in will be available soon...</h1>
+            <p>If you want to request data deletion, write an email to mail@xefili.dev with your access code and proof of identity.</p>
+
+            <span class="mt-12">Made with ❤️ in Kehl</span>
+        </div>
     </div>
 </body>
 </html>
