--- a/android/DrivingExp/support.html
+++ b/android/DrivingExp/support.html
@@ -12,12 +12,18 @@
 
     <xefili-header></xefili-header>
 
-    <div class="absolute mt-16 w-full">
-        <div class="flex flex-col text-center mx-2">
-            <h1 class="text-2xl underline underline-offset-4 mb-4">This page is being developed in will be available soon...</h1>
-            <p>If you want to request data deletion, write an email to mail@xefili.dev with your access code and proof of identity.</p>
+    <div class="absolute mt-16 w-full grid grid-cols-1 justify-items-center p-4">
+        <div class="mb-4">
+            <h1 class="gradient-text text-left text-4xl">Support Page</h1>
+            <p class="text-gray-600 text-2xl">Privacy and Support Ressources</p>
+        </div>
 
-            <span class="mt-12">Made with ❤️ in Kehl</span>
+        <div>
+            <a href="https://xefili.dev/android/DrivingExp/privacy.html" class="relative bg-light-200 dark:bg-dark-200 dark:hover:bg-dark-300 hover:bg-light-300 flex flex-col w-auto sm:w-72 h-52 p-4 dark:text-white rounded-2xl">
+                <h3 class="text-2xl">Privacy Documents</h3>
+                <p>Read the privacy policy and see how your data is used.</p>
+                <pop class="bg-light-100 dark:text-white dark:bg-dark-100 rounded-full px-3 py-2 w-fit absolute bottom-0 right-0 m-4"><e class="material-symbols-outlined">admin_panel_settings</e></pop>
+            </a>
         </div>
     </div>
 </body>
